crates/puffin_parser/src/snapshots/puffin_parser__parser__parser_tests__assign_stmt.snap
---
source: crates/puffin_parser/src/parser.rs
expression: output
---
SOURCE_FILE@0..9
    EXPR_STMT@0..9
        ASSIGN_STMT@0..9
            PAT_STMT@0..1
                a |IDENT@0..1
              |WHITESPACE@1..2
            = |EQ@2..3
              |WHITESPACE@3..4
            BIN_EXPR@4..9
                4 |INT@4..5
                  |WHITESPACE@5..6
                + |PLUS@6..7
                  |WHITESPACE@7..8
                3 |INT@8..9

