crates/puffin_parser/src/snapshots/puffin_parser__parser__parser_tests__block_stmt.snap
---
source: crates/puffin_parser/src/parser.rs
expression: output
---
SOURCE_FILE@0..15
    BLOCK_STMT@0..15
        { |L_BRACE@0..1
          |WHITESPACE@1..2
        PRINT_STMT@2..14
            print |KW_PRINT@2..7
              |WHITESPACE@7..8
            BIN_EXPR@8..14
                1 |INT@8..9
                  |WHITESPACE@9..10
                + |PLUS@10..11
                  |WHITESPACE@11..12
                1 |INT@12..13
                  |WHITESPACE@13..14
        } |R_BRACE@14..15

