crates/puffin_parser/src/snapshots/puffin_parser__parser__parser_tests__block_stmt_3.snap
---
source: crates/puffin_parser/src/parser.rs
expression: output
---
SOURCE_FILE@0..14
    BLOCK_STMT@0..14
        { |L_BRACE@0..1
        PRINT_STMT@1..13
            print |KW_PRINT@1..6
              |WHITESPACE@6..7
            BIN_EXPR@7..12
                1 |INT@7..8
                  |WHITESPACE@8..9
                + |PLUS@9..10
                  |WHITESPACE@10..11
                1 |INT@11..12
            
 |NL@12..13
        } |R_BRACE@13..14

