crates/puffin_parser/src/snapshots/puffin_parser__parser__parser_tests__block_stmt_4.snap
---
source: crates/puffin_parser/src/parser.rs
expression: output
---
SOURCE_FILE@0..14
    BLOCK_STMT@0..14
        { |L_BRACE@0..1
        
 |NL@1..2
        PRINT_STMT@2..13
            print |KW_PRINT@2..7
              |WHITESPACE@7..8
            BIN_EXPR@8..13
                1 |INT@8..9
                  |WHITESPACE@9..10
                + |PLUS@10..11
                  |WHITESPACE@11..12
                1 |INT@12..13
        } |R_BRACE@13..14

