crates/puffin_parser/src/snapshots/puffin_parser__parser__parser_tests__just_number.snap
---
source: crates/puffin_parser/src/parser.rs
expression: output
---
SOURCE_FILE@0..1
    EXPR_STMT@0..1
        1 |INT@0..1

