crates/puffin_parser/src/snapshots/puffin_parser__parser__parser_tests__multiple_simple.snap
---
source: crates/puffin_parser/src/parser.rs
expression: output
---
"SOURCE_FILE@0..13\n    BIN_EXPR@0..13\n        BIN_EXPR@0..10\n            BIN_EXPR@0..6\n                1 |INT@0..1\n                  |WHITESPACE@1..2\n                + |PLUS@2..3\n                  |WHITESPACE@3..4\n                2 |INT@4..5\n                  |WHITESPACE@5..6\n            + |PLUS@6..7\n              |WHITESPACE@7..8\n            3 |INT@8..9\n              |WHITESPACE@9..10\n        + |PLUS@10..11\n          |WHITESPACE@11..12\n        4 |INT@12..13\n"

