crates/puffin_parser/src/snapshots/puffin_parser__parser__parser_tests__multiple_stmt.snap
---
source: crates/puffin_parser/src/parser.rs
expression: output
---
"SOURCE_FILE@0..12\n    EXPR_STMT@0..5\n        BIN_EXPR@0..5\n            1 |INT@0..1\n              |WHITESPACE@1..2\n            + |PLUS@2..3\n              |WHITESPACE@3..4\n            2 |INT@4..5\n    PRINT_STMT@5..7\n          |WHITESPACE@5..6\n        3 |INT@6..7\n    EXPR_STMT@7..12\n        BIN_EXPR@7..12\n            2 |INT@7..8\n              |WHITESPACE@8..9\n            * |STAR@9..10\n              |WHITESPACE@10..11\n            4 |INT@11..12\n"

