crates/puffin_parser/src/snapshots/puffin_parser__parser__parser_tests__order_of_operations.snap
---
source: crates/puffin_parser/src/parser.rs
expression: output
---
SOURCE_FILE@0..13
    EXPR_STMT@0..13
        BIN_EXPR@0..13
            BIN_EXPR@0..10
                1 |INT@0..1
                  |WHITESPACE@1..2
                + |PLUS@2..3
                  |WHITESPACE@3..4
                BIN_EXPR@4..10
                    2 |INT@4..5
                      |WHITESPACE@5..6
                    * |STAR@6..7
                      |WHITESPACE@7..8
                    5 |INT@8..9
                      |WHITESPACE@9..10
            - |MINUS@10..11
              |WHITESPACE@11..12
            3 |INT@12..13

