crates/puffin_parser/src/snapshots/puffin_parser__parser__parser_tests__paren.snap
---
source: crates/puffin_parser/src/parser.rs
expression: output
---
SOURCE_FILE@0..25
    EXPR_STMT@0..25
        BIN_EXPR@0..25
            BIN_EXPR@0..16
                1 |INT@0..1
                  |WHITESPACE@1..2
                + |PLUS@2..3
                  |WHITESPACE@3..4
                BIN_EXPR@4..16
                    2 |INT@4..5
                      |WHITESPACE@5..6
                    * |STAR@6..7
                      |WHITESPACE@7..8
                    PAREN_EXPR@8..15
                        ( |L_PAREN@8..9
                        BIN_EXPR@9..14
                            3 |INT@9..10
                              |WHITESPACE@10..11
                            - |MINUS@11..12
                              |WHITESPACE@12..13
                            2 |INT@13..14
                        ) |R_PAREN@14..15
                      |WHITESPACE@15..16
            + |PLUS@16..17
              |WHITESPACE@17..18
            PAREN_EXPR@18..25
                ( |L_PAREN@18..19
                BIN_EXPR@19..24
                    1 |INT@19..20
                      |WHITESPACE@20..21
                    * |STAR@21..22
                      |WHITESPACE@22..23
                    2 |INT@23..24
                ) |R_PAREN@24..25

